--- a/Preparing Time Series from Wide-Form Data (Core).ipynb
+++ b/Preparing Time Series from Wide-Form Data (Core).ipynb
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0283e399",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c005d4c9",
    "metadata": {},
    "outputs": [
@@ -1104,6 +1104,16 @@
     "\n",
     "print(\"Change in Home Values from November to December 2008:\")\n",
     "print(change_in_home_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d58bcc09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resampled_df.to_csv('C:\\\\Users\\\\James\\\\OneDrive\\\\Desktop\\\\Preparing-Time-Series-from-Wide-Form-Data--Core-\\\\data\\\\resampled_df.csv', index=False)"
    ]
   }
  ],
